Consolidei e otimizei a API até às decisões de avaliação. Falta o PCA e o DF...
